--- a/gb/20/10/14/n12474134.md
+++ b/gb/20/10/14/n12474134.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ikizhq3096/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ikizhq3096/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ikizhq3096/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>学生自己选择是否参加文凭考试</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年10月14日讯】（记者陈安编译报导）10月13日（周二），亚省宣布，由于中共病毒（<ahref="https://github.com/ikizhq3096/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92%EF%BC%8Ccovid-19.md#1">新冠病毒，COVID-19</a>）大流行，<ahref="https://github.com/ikizhq3096/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>可选择是否参加预定于10月和11月举行的<ahref="https://github.com/ikizhq3096/djy/blob/master/gb/tag/%E6%96%87%E5%87%AD%E8%80%83%E8%AF%95.md#1">文凭考试</a>。</p>
-<p>亚省教育厅长阿德里安娜·拉格兰奇（Adriana LaGrange）表示，作为全省学校重返校园计划的一部分，家长和<ahref="https://github.com/ikizhq3096/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>将有选择权。</p>
-<p><ahref="https://github.com/ikizhq3096/djy/blob/master/gb/tag/%E6%96%87%E5%87%AD%E8%80%83%E8%AF%95.md#1">文凭考试</a>仍占学生最终成绩的30％。如果不参加考试，老师给予的分数将是学生课程的最终成绩。</p>
+<p>【大纪元2020年10月14日讯】（记者陈安编译报导）10月13日（周二），亚省宣布，由于中共病毒<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92%EF%BC%8Ccovid-19.md#1">新冠病毒，COVID-19</a>）大流行，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>可选择是否参加预定于10月和11月举行的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E5%87%AD%E8%80%83%E8%AF%95.md#1">文凭考试</a>。</p>
+<p>亚省教育厅长阿德里安娜·拉格兰奇（Adriana LaGrange）表示，作为全省学校重返校园计划的一部分，家长和<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E7%94%9F.md#1">学生</a>将有选择权。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E5%87%AD%E8%80%83%E8%AF%95.md#1">文凭考试</a>仍占学生最终成绩的30％。如果不参加考试，老师给予的分数将是学生课程的最终成绩。</p>
 <p>拉格兰奇新闻秘书科林·艾奇森（Colin Aitchison）在一份后续声明中说，现在是充满挑战的时代，对于考试，有些学生可能身体不舒服，或者未处于考试的最佳状态。因此，“我们要确保学生和他们的父母可以灵活地为自己的考试情况做出最佳决定。”</p>
 <p>10月6日，埃德蒙顿公立学校董事会通过一项动议，呼吁省政府在2020-2021学年期间暂停全省的文凭考试和省成绩测试（PAT）。</p>
 <p>报告称，由于隔离，额外压力，转向在线学习和压缩材料等因素影响，无法确定文凭考试能否提供有意义的学生成绩衡量指标。</p>
@@ -19,48 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/17/5/20/n9164866.md#1">埃德蒙顿中学排名（2016）—八叶智库</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/17/7/6/n9363202.md#1">亚省省考将在2019年全面实现数字化</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/3/16/n11943336.md#1">【中共肺炎】亚省关闭学校和持牌日托所</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/6/30/n12222985.md#1">【中共病毒】埃德蒙顿高中今秋改为季度学期</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/7/22/n12274203.md#1">【中共病毒】亚省计划今秋学校重新开学</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/9/22/n12421184.md#1">【中共病毒】亚省2所学校被“监控”</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/9/13/n12401028.md#1">无口罩 无社交距离 丹麦学校防疫值得加国借鉴</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/9/2/n12376541.md#1">亚省教育局将获得$2.5亿联邦资金</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/8/27/n12362767.md#1">未来网课如何走向 听听专家怎么说</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/20/8/28/n12362926.md#1">【中共病毒】亚省返校计划会随时调整</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/20/n9164866.md#1">埃德蒙顿中学排名（2016）—八叶智库</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/7/6/n9363202.md#1">亚省省考将在2019年全面实现数字化</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943336.md#1">【中共肺炎】亚省关闭学校和持牌日托所</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/6/30/n12222985.md#1">【中共病毒】埃德蒙顿高中今秋改为季度学期</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/22/n12274203.md#1">【中共病毒】亚省计划今秋学校重新开学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/21/n13449961.md#1">美国最古老的圣诞老人学校 如何培育人才？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/28/n13337096.md#1">亚省为小学生提供额外帮助 并减轻文凭考试压力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/6/n13283985.md#1">加拿大年轻人受教育程度有史以来最高</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/8/n13220040.md#1">加拿大华人忧孔子学院为中共收集学生信息</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/5/31/n12987152.md#1">卡大副教授：大流行期间学术作弊飙升</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11631409.md#1" target="_blank">正元：中共匪帮非我中华之邦</a></li><li><a href="https://github.com/ikizhq3096/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/23/n10081583.md#1" target="_blank">九旬老太自己洗衣做饭 打破医生20年前判定</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10771577.md#1" target="_blank">和平砥柱——丘吉尔的“铁幕”演说</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/9/26/n12433081.md#1">奇人预言“靖康之难”：天星不照 火龙骑日</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/8/n12462258.md#1">香港一名街头歌手的故事</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12466587.md#1">一群美军士兵称 在韩战时遭UFO以光线攻击</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12466299.md#1">女子休克时灵魂出窍 看见医生在抢救自己</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/9/24/n12428110.md#1">“自写履历”有多难？醉入冥府见奇闻</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468742.md#1">【重播】彭斯哥伦布演讲：选择美国走哪条路</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/8/26/n12359236.md#1">【思想领袖】中国的盖世太保仍在运作</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/13/n12472517.md#1">【十字路口】透视共产党：四大诡话 党媒维稳</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12465933.md#1">从食品到日用品 在Costco做六件事可省钱</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467642.md#1">蓬佩奥：中共已开始在各方面付出代价</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468085.md#1">疫情扩大 青岛大规模测核酸 多地发旅行警告</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469576.md#1">抗癌成功首晒全家福照 余苑绮灿笑：终于达成</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468741.md#1">章子怡携女探班汪峰 意外曝光手上硕大钻戒</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468501.md#1">疫情下对赌失败 周星驰将与大陆金主对簿公堂</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12471021.md#1">BTS提韩战惹怒五毛 中共战狼发言人罕见灭火</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12471315.md#1">胡歌蹲下来接受采访 暖心举动获称赞</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469663.md#1">被主人打毒针并活埋 小狗自己挖开坟墓逃出</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469863.md#1">前美国防部官员：应租F-35战机给台湾抗共</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467786.md#1">好疗愈！ 台中搜救犬挥舞国旗参加升旗典礼</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12470563.md#1">70岁仍有20岁身材 日医：简单的减糖餐是火锅</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467896.md#1">美国调查：搬家的压力比离婚或分手更大</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ikizhq3096/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ikizhq3096/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/14/n12474134.htm">学生自己选择是否参加文凭考试</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/14/n12474134.htm">学生自己选择是否参加文凭考试</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ikizhq3096/djy/blob/master/gb/20/10/14/n12474134.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ikizhq3096/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ikizhq3096/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/14/n12474134.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
